fix: history tab panel overflow layout

--- a/src/workbench/browser/src/app/pages/api/group/tree/api-group-tree.component.scss
+++ b/src/workbench/browser/src/app/pages/api/group/tree/api-group-tree.component.scss
@@ -79,7 +79,7 @@
   font-weight: 300;
 }
 .node_title {
-  max-width: 145px;
+  // max-width: 145px;
 }
 .tree_node {
   font-size: 12px;
